<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_alarm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.lesson4alarm.Activity.SetAlarmActivity">

    <TextView
        android:id="@+id/set_time_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="12:00"
        android:textSize="48sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_alignStart="@+id/buttons_layout"
        android:padding="8dp"
        android:text="@string/repeat" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/monday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_day_of_week"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"

            android:textOff="@string/monday"
            android:textOn="@string/monday" />

        <ToggleButton
            android:id="@+id/tuesday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_day_of_week"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textOff="@string/tuesday"
            android:textOn="@string/tuesday" />

        <ToggleButton
            android:id="@+id/wednesday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_day_of_week"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textOff="@string/wednesday"
            android:textOn="@string/wednesday" />

        <ToggleButton
            android:id="@+id/thursday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_day_of_week"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textOff="@string/thursday"
            android:textOn="@string/thursday" />

        <ToggleButton
            android:id="@+id/friday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_day_of_week"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textOff="@string/friday"
            android:textOn="@string/friday" />

        <ToggleButton
            android:id="@+id/saturday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_day_of_week"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textOff="@string/saturday"
            android:textOn="@string/saturday" />

        <ToggleButton
            android:id="@+id/sunday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_day_of_week"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textOff="@string/sunday"
            android:textOn="@string/sunday" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/set_button_set_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/set_alarm"
            android:textAllCaps="false"
            android:textColor="@color/aqua" />

        <Button
            android:id="@+id/delete_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/color_rad" />

        <Button
            android:id="@+id/cancel_button_set_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</RelativeLayout>
